# groundDb

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release.toml
.claude/skills/: grounddb.md
.claude/skills/grounddb/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: grounddb-spec-v1.md  implementation-plan.md
examples/basic-crud/: Cargo.toml  README.md
examples/basic-crud/data/: schema.yaml
examples/basic-crud/data/posts/draft/: 2026-02-10-my-draft-post.md
examples/basic-crud/data/posts/published/: 2026-02-13-quarterly-review.md
examples/basic-crud/data/users/: bob-martinez.md
examples/basic-crud/src/: handlers.rs  main.rs
examples/live-dashboard/: Cargo.toml  README.md  build.rs
examples/live-dashboard/data/: schema.yaml
examples/live-dashboard/data/posts/draft/: 2026-02-12-file-watching-demo.md
examples/live-dashboard/data/posts/published/: 2026-02-10-welcome-to-grounddb.md  2026-02-11-upcoming-features.md  2026-02-13-quarterly-review.md
examples/live-dashboard/data/users/: alice-chen.md  carol-nguyen.md
examples/live-dashboard/src/: main.rs
examples/live-dashboard/static/: index.html
grounddb/: Cargo.toml  README.md
grounddb-cli/: Cargo.toml
grounddb-cli/src/: main.rs
grounddb-codegen/: Cargo.toml  README.md
grounddb-codegen/src/: enum_gen.rs  generator.rs  lib.rs  store_gen.rs  struct_gen.rs  type_utils.rs  view_gen.rs
grounddb-example/: Cargo.toml
grounddb-example/data/events/: 01jmcx7k9a.md
grounddb-example/src/: handlers.rs  main.rs
grounddb/src/: error.rs  lib.rs  util.rs
grounddb/src/document/: mod.rs
grounddb/src/migration/: mod.rs
grounddb/src/path_template/: mod.rs
grounddb/src/schema/: mod.rs  parser.rs  types.rs
grounddb/src/store/: mod.rs
grounddb/src/system_db/: mod.rs
grounddb/src/validation/: mod.rs
grounddb/src/view/: mod.rs
grounddb/src/watcher/: mod.rs
tools/: integration-test.sh
tools/grounddb-client/: grounddb-client.js  package.json
