[workspace]
members = [
    "grounddb",
    "grounddb-codegen",
    "grounddb-cli",
    "examples/basic-crud",
    "examples/live-dashboard",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["justmaier"]
repository = "https://github.com/justmaier/groundDb"
homepage = "https://github.com/justmaier/groundDb"
rust-version = "1.75"
