[package]
name = "grounddb-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Compile-time code generation for GroundDB schemas"

[dependencies]
grounddb = { path = "../grounddb" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }
prettyplease = "0.2"
heck = "0.5"
serde_yaml = "0.9"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
