[package]
name = "grounddb-example"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Example HTTP server using GroundDB"
publish = false

[dependencies]
grounddb = { path = "../grounddb" }
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"

[build-dependencies]
grounddb-codegen = { path = "../grounddb-codegen" }
