[package]
name = "grounddb"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A schema-driven data layer using Markdown files as source of truth"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
slug = "0.1"
ulid = "1"
uuid = { version = "1", features = ["v4"] }
nanoid = "0.4"
regex = "1"
sqlparser = { version = "0.41", features = [] }
glob = "0.3"
tempfile = "3"
log = "0.4"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
