[package]
name = "live-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Live dashboard example with SSE using GroundDB file watching"
publish = false

[dependencies]
grounddb = { path = "../../grounddb" }
actix-web = "4"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
log = "0.4"

[build-dependencies]
grounddb-codegen = { path = "../../grounddb-codegen" }
